# imp

./: .gitattributes  .gitignore  .gitmodules  .imp_info.py  .travis.yml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.md  FindCGAL.cmake  IMPFindC++11.cmake  README  README.md  SCons.include  SConscript  SConstruct  Setup.cmake  VERSION  dependencies.py  description  git-imp  gitimp-common  setup_git.py  setup_git.sh
modules/example/ExampleDependency/: CMakeLists.txt
modules/pmi/: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  Setup.cmake  dependencies.py  setup_git.py
modules/pmi/.github/workflows/: build.yml
modules/pmi/benchmark/: benchmark_loop_reconstruction.py  benchmark_replica_exchange.py
modules/pmi/doc/: changelog.md  resolution.md
modules/pmi/examples/: ambiguity.py  atomistic.py  automatic.py  em.py  ideal_helix.py  membrane.py  multiscale.py  protein_residue_binding.py  selection.py  setup_analysis.py  symmetry.py
modules/pmi/examples/analysis/: analyse_crosslink_from_a_cluster.ipynb  clustering_analysis.ipynb  sampling exhaustiveness analysis.ipynb
modules/pmi/examples/cross-link/: cross-link_ms-ambiguity.ipynb  cross-link_ms.ipynb
modules/pmi/examples/data/: 1WCM.fasta  emd_1883.gmm50.mrc  emd_1883.gmm50.txt
modules/pmi/include/: CompositeRestraint.h  CrossLinkRestraintSet.h  InternalCoordinatesConstraint.h  MembraneRestraint.h  Resolution.h  SigmoidRestraintSphere.h  Symmetric.h  TransformMover.h  Uncertainty.h  utilities.h
modules/pmi/pyext/: swig.i-in
modules/pmi/pyext/src/: alphabets.py  analysis.py  dof.py  macros.py  metadata.py  mmcif.py  nonmantained.py  output.py  process_output.py  process_output_rmf.py  representation.py  samplers.py  sampling_tools.py  tools.py
modules/pmi/pyext/src/dof/: __init__.py
modules/pmi/pyext/src/io/: __init__.py  crosslink.py  utilities.py  xltable.py
modules/pmi/pyext/src/plotting/: topology.py
modules/pmi/pyext/src/restraints/: __init__.py  basic.py  crosslinking.py  crosslinking_atomic.py  crosslinking_new.py  em.py  em2d.py  npc.py  parameters.py  proteomics.py  residue_proximity_restraint.py  saxs.py  stereochemistry.py
modules/pmi/pyext/src/topology/: __init__.py  system_tools.py
modules/pmi/src/: CompositeRestraint.cpp  CrossLinkRestraintSet.cpp  InternalCoordinatesConstraint.cpp  MembraneRestraint.cpp  Resolution.cpp  SigmoidRestraintSphere.cpp  Symmetric.cpp  TransformMover.cpp  Uncertainty.cpp
modules/pmi/test/: expensive_test_cross_link_ms_restraint.py  expensive_test_disulfide_bond_restraint.py  expensive_test_input.py  expensive_test_io_xtable.py  expensive_test_loop_reconstruction.py  expensive_test_new_cross_link_ms_restraint.py  expensive_test_replica_exchange.py  expensive_test_restraints.py  expensive_test_topology_input.py  medium_test_analysis.py  medium_test_analysis2.py  medium_test_analysis3.py  medium_test_crosslink.py  medium_test_selection.py  medium_test_set_coordinates_from_rmf.py  medium_test_stat_hierarchy_handler.py  medium_test_stereochemistry.py  medium_test_topology.py  standards_exceptions  test_GaussianEMRestraint_rigidbody.py  test_add_gaussians_to_hierarchy.py  test_alphabets.py  test_ambiguous.py  test_analysis_rmsd.py  test_atomic_crosslinking.py  test_basic.py  test_cross_link_restraint_set.py  test_crosslinking.py  test_cylinder_restraint.py  test_data_handling.py  test_density_setup.py  test_dof.py  test_em2d.py  test_em_fit.py  test_fuzzy_restraint.py  test_fuzzy_restraint_1.rmf3  test_fuzzy_restraint_2.rmf3  test_fuzzy_restraint_3.rmf3  test_hierarchy_construction.py  test_io.py  (+43 more)
modules/pmi/test/input/: 2A73.pdb50.txt  FASTA_detgnt.txt  FASTA_pom152.txt  Prot1.txt  Rpb4.txt  chainA.dssp  expensive_test_new_cross_link_ms_restraint.csv  gcp2_gmm.txt  gmm_Rpb12.txt  mini.cif  mini.fasta  mini2.rmf  mini_mse.fasta  ministat.out  modeller_model.ali  multistate.csv  prot.cif  prot_gmm.mrc  prot_gmm.mrc.1.txt  prot_gmm.txt  proteasome.fasta  proteasome_xlinks.csv  seqs.fasta  test.fasta  test.nup84.rmsf  test_gmm.mrc  test_gmm.txt  topology.txt  topology_beads.txt  topology_flexible.txt  topology_keep_chain.txt  topology_mmcif.txt  topology_multi_char_chain.txt  topology_new.txt  topology_simple.txt  uniprot.fasta  xl_dataset_test_io_crosslink_map.txt  xls_davis.txt
modules/pmi/test/input/1mda/: 1mda_fix.fasta  1mda_imp.gmm
modules/pmi/test/input/loop_reconstruction/: test.IMP-2379ff1.PMI-348dcf70.dict  test.IMP-ead0367.PMI-cf3a0c.dict
modules/pmi/test/input/mediator/: med4.fasta  med4_1.txt  target_gmm.txt
modules/pmi/test/input/output/: stat.3.out
modules/pmi/test/input/output1/: statv1.out
modules/pmi/test/input/output2/: stat.1.out
modules/pmi/test/input/output_test/: initial.0.rmf3  initial.1.rmf3  initial.2.rmf3  initial.3.rmf3  initial.4.rmf3  initial.5.rmf3  initial.6.rmf3  initial.7.rmf3  stat.0.out  stat.1.out  stat.2.out  stat.3.out  stat.4.out  stat.5.out  stat.6.out  stat.7.out  stat_replica.0.out  stat_replica.1.out  stat_replica.2.out  stat_replica.3.out  stat_replica.4.out  stat_replica.5.out  stat_replica.6.out  stat_replica.7.out
modules/pmi/test/input/output_test_rmf/: initial.0.rmf3  initial.1.rmf3  initial.2.rmf3  initial.3.rmf3  initial.4.rmf3  initial.5.rmf3  initial.6.rmf3  initial.7.rmf3  stat_replica.0.out  (+7 more)
modules/pmi/tools/: setup_ci.sh  setup_travis.sh
modules/pmi/tools/dev_tools/: .codeclimate.yml  .gitignore  .travis.yml  README.md  check_standards.py  cleanup_code.py  cleanup_pycs.py  make_all_header.py  replace.py  setup_cmake.py
modules/pmi/tools/git/: update-dev_tools.sh
modules/pmi/utility/: plot_xlinks.py  run_analysis.py
modules/rmf/dependency/RMF/: .codeclimate.yml  .codecov.yml  .gitignore  .imp_info.py  .travis.yml  CMakeLists.txt  ChangeLog.md  README.md  config.h.in  imp_install.sh  install_rmf.sh  rmf.sublime-project  rmf.sublime-workspace  setup_git.py
modules/scratch/cuda/: CMakeLists.txt  cppIntegration.cu  distanceHist.cu
plugins/vmd/: CMakeLists.txt  Data.cpp
plugins/vmd/include/: vmdplugin.h
(+10556 files in other folders)
